--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,16 @@
   "manifest_version": 3,
   "name": "Troothy",
   "version": "1.0",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ],
+  "host_permissions": [
+    "http://localhost:5000/*"
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' http://localhost:5000; object-src 'self';"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -22,6 +31,7 @@
      	"*://*.foxnews.com/*"
 	],
       "js": ["content.js"],
+      "css": ["styles.css"],
       "run_at": "document_start"
     }
   ],
