--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -26,8 +26,9 @@
   "content_scripts": [
     {
       "matches": [
-	"*://*.nytimes.com/*",
+	    "*://*.nytimes.com/*",
      	"*://*.cnn.com/*",
+        "*://*.theonion.com/*",
      	"*://*.foxnews.com/*"
 	],
       "js": ["content.js"],
